--- a/lesson3_IntegrationContinue/exemple1_helloapp_ci/.eslintrc.json
+++ b/lesson3_IntegrationContinue/exemple1_helloapp_ci/.eslintrc.json
@@ -10,7 +10,7 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "indent": ["warn", 2],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "indent": ["warn", 2]
   }
 }
