Update and rename main.yml to cd.yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,6 @@ name: Pipeline CI/CD
 on:
   push:
     branches: [ "main" ]
-    paths: ["lesson3_IntegrationContinue/exemple1_helloapp_ci/**"]
   pull_request:
     branches: [ "main" ]
     paths: ["lesson3_IntegrationContinue/exemple1_helloapp_ci/**"]
@@ -71,6 +70,6 @@ jobs:
           context: ./lesson3_IntegrationContinue/exemple1_helloapp_ci/
           file: ./lesson3_IntegrationContinue/exemple1_helloapp_ci//Dockerfile
           push: true
-          tags: ghcr.io/${{ github.actor }}/myhello_app:${{ github.sha }}
+          tags: ghcr.io/${{ github.actor }}/myapp2:${{ github.sha }}
 
 
