--- a/lesson5_IaC/exemple_terraform_ansible_dockerswarm/ansible/playbook.yml
+++ b/lesson5_IaC/exemple_terraform_ansible_dockerswarm/ansible/playbook.yml
@@ -17,7 +17,7 @@
   become: yes
   tasks:
     - name: Swarm Init
-      shell: docker swarm init --advertise-addr {{ ansible_host }}
+      shell: docker swarm init --advertise-addr {{ ansible_default_ipv4.address }}
     - name: Get Token
       shell: docker swarm join-token worker -q
       register: swarm_token
@@ -27,7 +27,7 @@
   become: yes
   vars:
     token: "{{ hostvars[groups['manager'][0]]['swarm_token'].stdout }}"
-    m_ip: "{{ hostvars[groups['manager'][0]]['ansible_host'] }}"
+    m_ip: "{{ hostvars[groups['manager'][0]]['ansible_default_ipv4.address'] }}"
   tasks:
     - name: Join
       shell: docker swarm join --token {{ token }} {{ m_ip }}:2377
@@ -37,13 +37,13 @@
   hosts: manager
   become: yes
   tasks:
-    - name: Copier le fichier docker-compose.yml depuis le PC vers le Manager
+    - name: Copier le fichier stack.yml depuis le PC vers le Manager
       copy:
-        src: ../docker-compose.yml
-        dest: /home/ec2-user/docker-compose.yml
+        src: ../stack.yml
+        dest: /home/ec2-user/stack.yml
         owner: ec2-user
         group: ec2-user
         mode: '0644'
 
     - name: Déployer (ou mettre à jour) la stack Docker
-      shell: docker stack deploy -c /home/ec2-user/docker-compose.yml multiverse_swarm
+      shell: docker stack deploy -c /home/ec2-user/stack.yml multiverse_swarm
